Corrected table collapse error.#2824

--- a/openscholar/themes/hwpi_basetheme/css/responsive.layout.css
+++ b/openscholar/themes/hwpi_basetheme/css/responsive.layout.css
@@ -158,13 +158,6 @@ table[style] {
 }
 }
 
-@media(max-width:625px){
-	
-table, th, td, tr {
-    display:block;
-}
-}
-
 
 @media (max-width: 768px) {
 
